overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ body{
     background-repeat: repeat-x;
     position: absolute;
     top:0px;
-    
+    overflow: hidden;
     animation: Topclouds 40s linear infinite;
     -webkit-animation: Topclouds 40s linear infinite;
 }
